fixed width issues on IE

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,6 +1,7 @@
 .contact-page {
 
     .container {
+        width: 100%;
         max-width: 550px;
         .field {
             margin: 2rem 0 4rem 0;
