--- a/src/styles/mission.scss
+++ b/src/styles/mission.scss
@@ -7,6 +7,7 @@
         }
     
         .hero-body {
+            width: 100%;
             max-width: 720px;
 
             .buttons.is-centered {
