--- a/src/styles/partners.scss
+++ b/src/styles/partners.scss
@@ -1,6 +1,7 @@
 .partners-page {
     .hero {
         .hero-body {
+            width: 100%;
             max-width: 720px;
 
             .buttons.is-centered {
